Bug stripe ok, Jwt fixé

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -39,7 +39,7 @@
         <div class="mt-3">
             <button id="modifyTableNameButton" class="btn btn-warning">Modifier le nom</button> 
             <button id="saveButton" class="btn btn-success">Enregistrer dans la DB</button>
-            <a href="/Home/Upload" class="btn btn-secondary">Gérer Menu</a>
+            <a href="/AdminView/Upload" class="btn btn-secondary">Gérer Menu</a>
 
         </div>
     </div>
