--- a/Views/Admin/Upload.cshtml
+++ b/Views/Admin/Upload.cshtml
@@ -6,26 +6,27 @@
 
 <section class="upload-section">
     <div class="upload-container">
-        <h2>📄 Télécharger un Nouveau Menu</h2>
+        <h2>Télécharger un Nouveau Menu</h2>
         <p>Importez un fichier PDF contenant le menu du restaurant en plusieurs langues.</p>
 
         <form asp-controller="File" asp-action="UploadPdf" method="post" enctype="multipart/form-data" class="upload-form">
+            @Html.AntiForgeryToken()
 
             <!-- Upload Menu Français -->
             <label for="file-fr" class="custom-file-upload">
-                🇫🇷 📂 Choisir un fichier PDF (Français)
+                Choisir un fichier PDF (Français)
                 <input type="file" name="fileFr" id="file-fr" accept="application/pdf" required hidden>
             </label>
 
             <!-- Upload Menu Anglais -->
             <label for="file-en" class="custom-file-upload">
-                🇬🇧 📂 Choisir un fichier PDF (Anglais)
+                Choisir un fichier PDF (Anglais)
                 <input type="file" name="fileEn" id="file-en" accept="application/pdf" required hidden>
             </label>
 
             <!-- Upload Menu Néerlandais -->
             <label for="file-nl" class="custom-file-upload">
-                🇳🇱 📂 Choisir un fichier PDF (Néerlandais)
+                Choisir un fichier PDF (Néerlandais)
                 <input type="file" name="fileNl" id="file-nl" accept="application/pdf" required hidden>
             </label>
 
@@ -34,7 +35,7 @@
     </div>
 </section>
 <link rel="stylesheet" href="~/css/StyleUploadPdf.css" asp-append-version="true">
-<script src="/js/ScriptDisplayBloc.js"></script> @* script qui verifie si token avant d'afficher page admin' *@
+<script src="/js/ScriptDisplayBloc.js"></script> @* auth check *@
 <style>
     /* Centrer la page */
     body {
