cookies, terms ok

--- a/Views/Admin/Upload.cshtml
+++ b/Views/Admin/Upload.cshtml
@@ -36,6 +36,7 @@
 </section>
 <link rel="stylesheet" href="~/css/StyleUploadPdf.css" asp-append-version="true">
 <script src="/js/ScriptDisplayBloc.js"></script> @* auth check *@
+<script src="/js/ScriptUpload.js"></script>
 <style>
     /* Centrer la page */
     body {
