--- a/Views/Client/PageReservationClient.cshtml
+++ b/Views/Client/PageReservationClient.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Réservation Client";
 }
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/StylePageClient.css">
-
+    
 </head>
 
 
@@ -13,7 +13,7 @@
    
 
     <!-- Overlay pour l'arrière-plan -->
-    <div id="modalOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;" onclick="closeAdminModal()"></div>
+    <div id="reservationOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;"></div>
 
     <div class="container text-center mt-4">
         <h1>Réservez votre table</h1>
@@ -33,7 +33,7 @@
 
     <div id="reservationModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeReservationModal()">&times;</span>
+            <span class="close" id="reservationCloseBtn">&times;</span>
             <h2>Réservez la  <span hidden id="tableId"> </span><strong id="TableNameModal"></strong></h2>
             <p>Date sélectionnée : <strong id="displayReservationDate"></strong></p>
             <p>Heure sélectionnée : <strong id="displayReservationHoure"></strong></p>
@@ -52,8 +52,8 @@
                 <input type="tel" id="clientPhone" class="form-control" placeholder="Entrez votre numéro de téléphone" required>
             </div>
             <br>
-            <button class="btn btn-primary" onclick="submitReservation()">Réserver</button>
-            <button class="btn btn-secondary" onclick="closeReservationModal()">Annuler</button>
+            <button class="btn btn-primary" id="reserveBtn">Réserver</button>
+            <button class="btn btn-secondary" id="cancelReserveBtn">Annuler</button>
         </div>
     </div>
 
