--- a/Views/Admin/Upload.nl.cshtml
+++ b/Views/Admin/Upload.nl.cshtml
@@ -31,5 +31,19 @@
     </div>
 </section>
 <link rel="stylesheet" href="~/css/StyleUploadPdf.css" asp-append-version="true">
+<script src="/js/ScriptDisplayBloc.js"></script>
 <script src="/js/ScriptUpload.js"></script>
+
+<style>
+    body {
+        margin: 30px;
+        padding: 0;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-color: #000 !important;
+        font-family: Arial, sans-serif;
+    }
+</style>
 
