--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -185,5 +185,7 @@
     </div>
     <script src="~/js/CookieConsent.js"></script>
 
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
